force-app/main/default/objects/Compliance_Requirement__mdt/Compliance_Requirement__mdt.object-meta.xml
<CustomObject>
    <description>Defines the documents a Reseller must have on file (per-category). Drives the Partner Compliance Cockpit and per-Reseller checklist. Admin-managed without deploy.</description>
    <label>Compliance Requirement</label>
    <pluralLabel>Compliance Requirements</pluralLabel>
</CustomObject>