force-app/main/default/objects/Compliance_Requirement__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Only active requirements are evaluated. Lets an admin retire a requirement without deleting history.</description>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>