force-app/main/default/objects/Compliance_Requirement__mdt/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>Must match a File_Hub_Entry__c.Category__c picklist value (e.g. Contract, Tax Document, Insurance, Bank Details). A reseller satisfies this requirement by having a file in this category linked to them.</description>
    <label>Document Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>