force-app/main/default/objects/Compliance_Requirement__mdt/fields/Has_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Has_Expiry__c</fullName>
    <description>When true, a document of this type is evaluated against its Expiry_Date__c — expired or expiring-soon documents reduce the reseller's compliance score.</description>
    <label>Has Expiry</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>