force-app/main/default/objects/Compliance_Requirement__mdt/fields/Requirement_Label__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Label__c</fullName>
    <description>Human-friendly name shown in the cockpit column header and checklist row (e.g. "Signed Distribution Contract").</description>
    <label>Requirement Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>