force-app/main/default/objects/Compliance_Requirement__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Left-to-right column order in the cockpit and top-to-bottom row order in the checklist.</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>