force-app/main/default/objects/Compliance_Requirement__mdt/fields/Warning_Days__c.field-meta.xml
<CustomField>
    <fullName>Warning_Days__c</fullName>
    <description>Days before Expiry_Date__c at which a document flips to "expiring soon" (yellow). Only used when Has_Expiry is true. Default 30.</description>
    <label>Warning Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>